--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -3,3 +3,4 @@
 .ico-cancelar {background-image: url('../images/cancelar-24x24.png');}
 .ico-remuneracion {background-image: url('../images/remuneracion-24x24.png');}
 .ico-add {background-image: url('../images/add-24x24.png');}
+.ico-exportar {background-image: url('../images/exportar-24x24.png');}
